# Autonomous_navigation

./: README.md  install_packages.sh  requirements.txt  run_all.sh
Frame_id_change/: README.md  id_change.py
ICP/: CMakeLists.txt  run.sh
ICP/data/: n_6.pcd
Mueavi_Calibration/: MUEAVI_TF.xlsx  README.md
drive_car/: CMakeLists.txt  package.xml
drive_car/scripts/: OdomDataExtract.py  node_init_odom.py  steering_pub.py  steering_sub.py  sub1.py  test.py  veh_loc.py  veh_loc_quat.py  vehicle_spawn.py
error_test/: CMakeLists.txt  READme.txt  package.xml  setup.py
error_test/launch/: error_test.launch
error_test/nodes/: error_node1
error_test/src/error_test/: __init__.py  error_test.py
eu_cluster3/: CMakeLists.txt  build.sh  package.xml  run.sh
eu_cluster3/launch/: eu_cluster3.launch
eu_cluster3/rviz/: eu_cluster_new.rviz
eu_cluster3/src/: eu_cluster3.cpp
matching_test/: CMakeLists.txt  package.xml  run.sh
matching_test/data/: nissan_1.pcd  nissan_2.pcd  nissan_3.pcd  nissan_4.pcd  nissan_5.pcd
matching_test/launch/: eu_matching.launch  matching_test.launch
matching_test/src/: matching_test.cpp
mueavi_tf/: CMakeLists.txt  README.md  build.sh  package.xml  run.sh
mueavi_tf/data/: mueavi_transformations.csv
mueavi_tf/include/mueavi_tf/: mueavi_tf_node.hpp
mueavi_tf/launch/: mueavi_os_01.launch  mueavi_os_03_05_06.launch  mueavi_os_08_11_13.launch  mueavi_os_16_18_19.launch  mueavi_tf.launch
mueavi_tf/rviz/: mueavi.rviz
mueavi_tf/service/: mueavi_tf_ros.service  run_mueavi_tf.sh
mueavi_tf/src/: mueavi_tf_node.cpp
n03/: CMakeLists.txt  build.sh  n03.rviz  package.xml  run.sh
n03/data/: background3.pcd  new_bcg_3.pcd  new_bcg_5.pcd  new_bcg_6.pcd
n03/launch/: n03.launch
n03/src/: n03.cpp
post_process_test/: CMakeLists.txt  READme.txt  package.xml  setup.py
post_process_test/launch/: postprocess_launch1.launch
post_process_test/nodes/: postprocess_node1
post_process_test/src/post_process_test/: __init__.py  main.py
pp_controller/: CMakeLists.txt  package.xml
pp_controller/launch/: path_plan_track.launch
pp_controller/path/: odom_final.csv  odom_final_short.csv  odom_return.csv  trajectory_name.csv
pp_controller/scripts/: find_nearest_goal.py  find_nearest_pose.py  getWaypoints.py  path_plot.py  path_track.py  steering_pub1.py  vehicle_controller.py
