<?xml version="1.0"?>
<package>
  <name>matching_test</name>
  <version>0.0.1</version>
  <description>The matching_test package</description>




  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>jsk_recognition_msgs</build_depend>
  <build_depend>std_msgs</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>jsk_recognition_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
</package>
